CORE-3107 - Fixed tiles "unwrapping" after resizing the window

--- a/css/tiles.less
+++ b/css/tiles.less
@@ -1,6 +1,7 @@
 .mw-bs {
 
     .mw-tiles {
+        max-width: 100%;
         width: 100%;
     }
 
